fix: correct Doctrine repositoryClass in PHPStan config
The repositoryClass was pointing to non-existent App\Repository\ServiceEntityRepository.
Changed to the correct Doctrine\Bundle\DoctrineBundle\Repository\ServiceEntityRepository.

Reduces baseline from 105 to 100 unique entries.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -16,7 +16,7 @@ parameters:
     # Doctrine specific
     doctrine:
         objectManagerLoader: null
-        repositoryClass: App\Repository\ServiceEntityRepository
+        repositoryClass: Doctrine\Bundle\DoctrineBundle\Repository\ServiceEntityRepository
 
     # Strict rules are enabled via extension-installer
 
