--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -61,12 +61,6 @@ parameters:
 			path: src/Model/Base.php
 
 		-
-			message: '#^PHPDoc tag @var with type Doctrine\\ORM\\Query\<\(int\|string\), mixed\> is not subtype of type Doctrine\\ORM\\Query\<null, mixed\>\.$#'
-			identifier: varTag.type
-			count: 1
-			path: src/Repository/ContractRepository.php
-
-		-
 			message: '#^Method App\\Response\\Error\:\:getExceptionAsArray\(\) should return array\{message\: string, class\: class\-string\<Throwable\>, code\: int\|string, file\: string, line\: int, trace\: list\<array\{args\?\: array\<int, mixed\>, class\?\: class\-string, file\?\: string, function\?\: string, line\?\: int, type\?\: ''\-\>''\|''\:\:''\}\>, previous\: array\<string, mixed\>\|null\}\|null but returns array\{message\: string, class\: class\-string\<Throwable\>&literal\-string, code\: \(int\|string\), file\: string, line\: int, trace\: list\<array\{function\: string, line\?\: int, file\?\: string, class\?\: class\-string, type\?\: ''\-\>''\|''\:\:'', args\?\: array\<mixed\>, object\?\: object\}\>, previous\: array\{message\: string, class\: class\-string\<Throwable\>, code\: int\|string, file\: string, line\: int, trace\: list\<array\{args\?\: array\<int, mixed\>, class\?\: class\-string, file\?\: string, function\?\: string, line\?\: int, type\?\: ''\-\>''\|''\:\:''\}\>, previous\: array\<string, mixed\>\|null\}\|null\}\.$#'
 			identifier: return.type
 			count: 1
@@ -139,7 +133,7 @@ parameters:
 			path: src/Service/Integration/Jira/JiraIntegrationService.php
 
 		-
-			message: '#^PHPDoc tag @var with type Laminas\\Ldap\\Collection\<array\<string, array\<int, string\>\>\> is not subtype of type Laminas\\Ldap\\Collection\<array\{dn\: string\}\>\.$#'
+			message: '#^PHPDoc tag @var with type array\<string, array\<int, string\>\> is not subtype of type array\{dn\: string\}\|null\.$#'
 			identifier: varTag.type
 			count: 1
 			path: src/Service/Ldap/LdapClientService.php
@@ -191,12 +185,6 @@ parameters:
 			identifier: sfpPsrLog.messageNotStaticString
 			count: 1
 			path: src/Service/Ldap/ModernLdapService.php
-
-		-
-			message: '#^PHPDoc tag @var with type array\<string, mixed\> is not subtype of type array\<int\|string, string\>\.$#'
-			identifier: varTag.type
-			count: 1
-			path: src/Service/Response/PaginationLinkService.php
 
 		-
 			message: '''
