--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,19 +1,2 @@
 parameters:
-	ignoreErrors:
-		-
-			rawMessage: 'Variable method call on $this(App\Model\Base).'
-			identifier: method.dynamicName
-			count: 1
-			path: src/Model/Base.php
-
-		-
-			rawMessage: 'PHPDoc tag @var with type array<string, array<int, string>> is not subtype of type array{dn: string}|null.'
-			identifier: varTag.type
-			count: 1
-			path: src/Service/Ldap/LdapClientService.php
-
-		-
-			rawMessage: Variable method call on object.
-			identifier: method.dynamicName
-			count: 1
-			path: tests/Performance/PerformanceBenchmarkRunner.php
+	ignoreErrors: []
