fix: resolve Symfony 7.3 deprecation warnings
- Set property_info.with_constructor_extractor explicitly
- Enable doctrine.orm.enable_native_lazy_objects for PHP 8.4+
- Set framework.profiler.collect_serializer_data to true
- Use .php routing files instead of deprecated .xml

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,10 +19,9 @@ doctrine:
         # backtrace queries in profiler (increases memory usage per request)
         #profiling_collect_backtrace: '%kernel.debug%'
     orm:
-        # Use native lazy ghost objects instead of deprecated proxy classes
-        # This eliminates the proxy deprecation warnings
-        enable_lazy_ghost_objects: true
-        # Explicitly disable proxy generation since we're using ghost objects
+        # Use native lazy objects (PHP 8.4+) instead of deprecated proxy/ghost classes
+        enable_native_lazy_objects: true
+        # Explicitly disable proxy generation since we're using native lazy objects
         auto_generate_proxy_classes: false
         # Disable deprecated controller resolver automapping
         controller_resolver:
