--- a/config/routes/dev/web_profiler.yaml
+++ b/config/routes/dev/web_profiler.yaml
@@ -1,9 +1,9 @@
 # Web Debug Toolbar routes
 web_profiler_wdt:
-    resource: '@WebProfilerBundle/Resources/config/routing/wdt.xml'
+    resource: '@WebProfilerBundle/Resources/config/routing/wdt.php'
     prefix: '/_wdt'
 
 # Profiler routes
 web_profiler_profiler:
-    resource: '@WebProfilerBundle/Resources/config/routing/profiler.xml'
+    resource: '@WebProfilerBundle/Resources/config/routing/profiler.php'
     prefix: '/_profiler'
