chore: replace default logo with Netresearch branding

--- a/.env
+++ b/.env
@@ -53,7 +53,7 @@ LDAP_CREATE_USER=true
 
 ###> Application Configuration ###
 APP_LOCALE="en"
-APP_LOGO_URL="/build/images/logo.png"
+APP_LOGO_URL="/build/images/logo-netresearch.svg"
 APP_MONTHLY_OVERVIEW_URL="https://stats.timetracker.nr/?user="
 APP_TITLE="Netresearch TimeTracker"
 APP_HEADER_URL=""
