--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,7 +7,8 @@ parameters:
     secret: '%env(APP_SECRET)%'
     app_title: '%env(APP_TITLE)%'
     app_locale: '%env(APP_LOCALE)%'
-    app_logo_url: '%env(APP_LOGO_URL)%'
+    app_logo_url: '%env(default:app_logo_url_default:APP_LOGO_URL)%'
+    app_logo_url_default: '/build/images/logo-netresearch.svg'
     app_monthly_overview_url: '%env(APP_MONTHLY_OVERVIEW_URL)%'
     app_header_url: '%env(APP_HEADER_URL)%'
     app_show_billable_field_in_export: '%env(bool:APP_SHOW_BILLABLE_FIELD_IN_EXPORT)%'
