fix(security): use secure=auto for remember_me cookie
Change from secure=true to secure=auto so the REMEMBERME cookie
deletion works over HTTP (development) while still being secure
over HTTPS (production).

With secure=true, browsers ignored the deletion cookie over HTTP,
causing an infinite redirect loop between / and /login.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -49,7 +49,7 @@ security:
                 secret: '%kernel.secret%'
                 lifetime: 2592000 # 30 days in seconds
                 path: /
-                secure: true  # HTTPS required for security
+                secure: auto  # Auto-detect: secure over HTTPS, non-secure over HTTP
 
             # Enable user switching (impersonation)
             switch_user:
