fix(security): allow PUBLIC_ACCESS to /logout route
Without this, remember_me users redirected to /logout would trigger
another AccessDeniedException (since /logout also required
IS_AUTHENTICATED_FULLY), causing an infinite /logout → /logout loop.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -60,6 +60,7 @@ security:
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/login_check, roles: PUBLIC_ACCESS }
+        - { path: ^/logout, roles: PUBLIC_ACCESS }
         - { path: ^/css, roles: PUBLIC_ACCESS }
         - { path: ^/js, roles: PUBLIC_ACCESS }
         - { path: ^/images, roles: PUBLIC_ACCESS }
