--- a/compose.yml
+++ b/compose.yml
@@ -25,6 +25,7 @@ services:
       - production
 
   # Development app service with dev tools (includes databases)
+  # LDAP and other config read from .env files (Symfony dotenv)
   app-dev:
     build:
       context: .
@@ -36,14 +37,6 @@ services:
       - APP_DEBUG=1
       - TRUSTED_PROXY_ALL
       - TRUSTED_PROXY_LIST
-      - LDAP_HOST=${LDAP_HOST:-ldap-dev}
-      - LDAP_PORT=${LDAP_PORT:-389}
-      - LDAP_READUSER=${LDAP_READUSER:-cn=readuser,dc=dev,dc=local}
-      - LDAP_READPASS=${LDAP_READPASS:-readuser}
-      - LDAP_BASEDN=${LDAP_BASEDN:-dc=dev,dc=local}
-      - LDAP_USERNAMEFIELD=${LDAP_USERNAMEFIELD:-uid}
-      - LDAP_USESSL=${LDAP_USESSL:-false}
-      - LDAP_CREATE_USER=${LDAP_CREATE_USER:-true}
     volumes:
       # Development volumes (bind mounts for live editing)
       - .:/var/www/html
@@ -55,10 +48,9 @@ services:
       - db
       - db-test
     restart: "no"
-    profiles: 
+    profiles:
       - dev
       - development
-      - test
 
   # Development tools service (static analysis, linting - no DB dependencies)
   app-tools:
@@ -95,7 +87,7 @@ services:
       - prod
       - production
 
-  # Development web server  
+  # Development web server
   httpd-dev:
     image: nginx:alpine
     volumes:
@@ -106,10 +98,9 @@ services:
     restart: "no"
     ports:
       - ${HTTP_PORT:-8765}:80
-    profiles: 
+    profiles:
       - dev
       - development
-      - test
 
   # Production database
   db:
@@ -123,7 +114,7 @@ services:
       - db-data:/var/lib/mysql
       - ./sql/full.sql:/docker-entrypoint-initdb.d/001_full.sql
     restart: always
-    profiles: 
+    profiles:
       - prod
       - production
       - dev
@@ -183,15 +174,18 @@ services:
       - LDAP_READONLY_USER=true
       - LDAP_READONLY_USER_USERNAME=readuser
       - LDAP_READONLY_USER_PASSWORD=readuser
+      # Keep bootstrap files instead of deleting them after processing
+      - LDAP_REMOVE_CONFIG_AFTER_SETUP=false
     volumes:
       - ldap-dev-data:/var/lib/ldap
       - ldap-dev-config:/etc/ldap/slapd.d
-      # Bootstrap LDIF for dev users (loaded on first container start)
-      - ./docker/ldap/users-only.ldif:/container/service/slapd/assets/config/bootstrap/ldif/custom/users.ldif:ro
+      # Copy LDIF to a directory that allows modification (use entrypoint to copy)
+      - ./docker/ldap/users-only.ldif:/ldif-source/users.ldif:ro
+    entrypoint: ["/bin/bash", "-c", "cp /ldif-source/users.ldif /container/service/slapd/assets/config/bootstrap/ldif/custom/users.ldif 2>/dev/null || true && exec /container/tool/run"]
     ports:
       - "3389:389"
     restart: "no"
-    profiles: 
+    profiles:
       - dev
       - development
       - test
