--- a/compose.yml
+++ b/compose.yml
@@ -120,6 +120,7 @@ services:
       - dev
       - development
       - test
+      - e2e
 
   # Test database (for unit/integration tests)
   db-test:
@@ -163,6 +164,44 @@ services:
       - development
       - test
 
+  # E2E test app service (uses main db with test environment)
+  app-e2e:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: devbox
+    image: ghcr.io/netresearch/timetracker:devbox
+    environment:
+      - APP_ENV=test
+      - APP_DEBUG=1
+      - TRUSTED_PROXY_ALL
+      - TRUSTED_PROXY_LIST
+    volumes:
+      - .:/var/www/html
+      - ./public:/var/www/html/public
+      - ./var/cache:/var/www/html/var/cache
+      - ./var/log:/var/www/html/var/log
+    depends_on:
+      - db
+      - ldap-dev
+    restart: "no"
+    profiles:
+      - e2e
+
+  # E2E test web server (port 8766 to avoid conflict with dev)
+  httpd-e2e:
+    image: nginx:alpine
+    volumes:
+      - ./public:/var/www/html/public
+      - ./docker/nginx/e2e.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app-e2e
+    restart: "no"
+    ports:
+      - ${E2E_HTTP_PORT:-8766}:80
+    profiles:
+      - e2e
+
   # Development LDAP server
   ldap-dev:
     image: osixia/openldap:latest
@@ -189,6 +228,7 @@ services:
       - dev
       - development
       - test
+      - e2e
 
 networks:
   default:
