feat: upgrade to PHP 8.5 and Symfony 8.0
- Update Dockerfile to use php:8.5-fpm base image
- Build APCu from source for PHP 8.5 compatibility (PECL version not yet available)
- Remove opcache from ext-install (now built-in to PHP 8.5)
- Update composer.json to require PHP ^8.5 and Symfony ^8.0
- Update all Symfony components to 8.0
- Update PHPUnit to 12.x for PHP 8.5 support

Breaking changes addressed:
- Symfony 8: RememberMeToken constructor takes only 2 params
- Symfony 8: Application::add() renamed to addCommand()
- DateTimeImmutable::sub() returns new instance (must use return value)
- Entity IDs can be null, added proper null checks

Code quality:
- PHPStan: 0 errors at configured level
- PHP-CS-Fixer: All files pass
- PHPat: 0 architecture violations
- Unit/Controller tests: Pass

--- a/compose.yml
+++ b/compose.yml
@@ -44,6 +44,8 @@ services:
       - ./var/cache:/var/www/html/var/cache
       - ./var/log:/var/www/html/var/log
       - /usr/local/share/ca-certificates/:/usr/local/share/ca-certificates/host
+      # PHP test config with increased memory limit (2G)
+      - ./docker/php/test.ini:/usr/local/etc/php/conf.d/99-test.ini:ro
     depends_on:
       - db
       - db-test
@@ -67,6 +69,8 @@ services:
       - .:/var/www/html
       - ./var/cache:/var/www/html/var/cache
       - ./var/log:/var/www/html/var/log
+      # PHP test config with increased memory limit (2G)
+      - ./docker/php/test.ini:/usr/local/etc/php/conf.d/99-test.ini:ro
     restart: "no"
     profiles: 
       - tools
