--- a/docker/php/xdebug.ini
+++ b/docker/php/xdebug.ini
@@ -2,8 +2,9 @@
 ; Xdebug extension is loaded automatically by docker-php-ext-enable
 ; Configuration settings only
 
-; Enable Xdebug for development
-xdebug.mode=debug,develop
+; Xdebug mode is OFF by default to avoid Xdebug 3.5.0 + PHP 8.5 segfaults
+; Enable via XDEBUG_MODE=debug environment variable when needed
+xdebug.mode=off
 
 ; Configure step debugging (for IDE integration)
 xdebug.start_with_request=yes
