feat(clock): add frozen clock infrastructure for deterministic testing
- Add FrozenClock implementing ClockInterface for fixed time in E2E tests
- Add ClockFactory to create FrozenClock when APP_FROZEN_TIME env var is set
- Update services.yaml to use ClockFactory for clock service
- Add APP_FROZEN_TIME=2024-01-15 to E2E container in compose.yml

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -104,9 +104,9 @@ services:
         tags:
             - { name: kernel.event_subscriber }
 
-    # Add this: Configure ClockInterface and SystemClock
+    # Clock service - uses FrozenClock if APP_FROZEN_TIME is set (for E2E tests)
     App\Service\ClockInterface:
-        alias: App\Service\SystemClock
+        factory: ['App\Service\ClockFactory', 'create']
 
     # Query Cache Service configuration
     App\Service\Cache\QueryCacheService:
