--- a/compose.yml
+++ b/compose.yml
@@ -117,6 +117,8 @@ services:
     volumes:
       - db-data:/var/lib/mysql
       - ./sql/full.sql:/docker-entrypoint-initdb.d/001_full.sql
+      # Test data for dev/E2E testing (fixed date 2024-01-15 for deterministic tests)
+      - ./sql/testdata.sql:/docker-entrypoint-initdb.d/002_testdata.sql
     restart: always
     profiles:
       - prod
@@ -180,6 +182,8 @@ services:
       - APP_DEBUG=1
       - TRUSTED_PROXY_ALL
       - TRUSTED_PROXY_LIST
+      # Frozen time for deterministic E2E tests - matches test data in sql/testdata.sql
+      - APP_FROZEN_TIME=2024-01-15 12:00:00
     volumes:
       - .:/var/www/html
       - ./public:/var/www/html/public
