fix(ci): add --ignore-platform-req=php for laminas-ldap PHP 8.5
laminas-ldap 2.19.0 doesn't support PHP 8.5 yet (only ~8.1-8.4).
The code works fine on PHP 8.5, it's just a constraint issue.

Tracking: https://github.com/laminas/laminas-ldap/issues/62

Also adds composer check-platform-reqs to CI for visibility.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,16 @@ jobs:
         env:
           COMPOSE_PROFILES: tools
         run: |
-          docker compose run --rm app-tools composer install --no-interaction --prefer-dist
+          # --ignore-platform-req=php needed until laminas-ldap adds PHP 8.5 support
+          # See: https://github.com/laminas/laminas-ldap/issues/62
+          docker compose run --rm app-tools composer install --no-interaction --prefer-dist --ignore-platform-req=php
+
+      - name: Check platform requirements
+        env:
+          COMPOSE_PROFILES: tools
+        run: |
+          # Report platform requirement issues (non-blocking, for visibility)
+          docker compose run --rm app-tools composer check-platform-reqs || true
 
       - name: Composer audit (security)
         env:
