chore: update env files for bake-first workflow
- Update .env.example: remove COMPOSE_BAKE, fix BUILD_TARGET
- Update .envrc: update tthelp with bake commands

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@
 # Set to dev, prod, or test
 COMPOSE_PROFILES=dev
 
-# Build target for Docker (production, devbox)
-BUILD_TARGET=devbox
+# Build target for Docker (production, dev, tools)
+# Note: Use `docker bake` for builds - versions are in docker-bake.hcl
+BUILD_TARGET=dev
 
 # Application environment
 APP_ENV=dev
