--- a/.envrc
+++ b/.envrc
@@ -20,10 +20,12 @@ Netresearch TimeTracker — developer help
 URL: ${TIMETRACKER_URL}
 
 Common make targets:
-  make up              # start stack (nginx, app, db)
+  make up              # build + start stack (nginx, app, db)
   make down            # stop stack
   make restart         # restart stack
-  make build           # build images
+  make bake            # build production image
+  make bake-dev        # build development image
+  make bake-all        # build all images
   make logs            # follow logs
   make sh              # shell into app container (requires make up)
 
