ci: add docker bake step before compose commands
Since compose.yml no longer has build: sections (bake-first workflow),
CI must build images explicitly with 'docker bake' before running
'docker compose run' commands.

Fixes: manifest unknown error in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
         run: |
           if [ ! -f phpstan.neon ] && [ -f phpstan.dist.neon ]; then cp phpstan.dist.neon phpstan.neon; fi
 
+      - name: Build tools image
+        run: docker bake app-tools
+
       - name: Install dependencies
         env:
           COMPOSE_PROFILES: tools
@@ -92,11 +95,16 @@ jobs:
           if [ ! -f phpunit.xml ] && [ -f phpunit.xml.dist ]; then cp phpunit.xml.dist phpunit.xml; fi
           sed '1s/^/USE unittest;\n/' sql/full.sql > sql/unittest/001_testtables.sql
 
+      - name: Build development image
+        run: docker bake app-dev
+
       - name: Set up development environment
         env:
           COMPOSE_PROFILES: dev
         run: |
-          make install
+          # Image already built by bake - just install deps and start services
+          docker compose run --rm app-dev composer install --ignore-platform-req=php
+          docker compose run --rm app-dev npm install --legacy-peer-deps
           docker compose up -d
           docker compose exec -T db_unittest mariadb-admin ping -h 127.0.0.1 -uroot -pglobal123 --wait --connect-timeout=60
 
