fix(ci): create vendor directory before composer install
The tools image runs as non-root user, but the volume mount overwrites
the container's /var/www/html with the host directory. Create vendor
and var directories with proper permissions before running composer.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
         env:
           COMPOSE_PROFILES: tools
         run: |
+          # Create directories with proper permissions for non-root container user
+          mkdir -p vendor var/cache var/log
+          chmod -R 777 vendor var
           # --ignore-platform-req=php needed until laminas-ldap adds PHP 8.5 support
           # See: https://github.com/laminas/laminas-ldap/issues/62
           docker compose run --rm app-tools composer install --no-interaction --prefer-dist --ignore-platform-req=php
