fix: address PR review comments from Copilot
- docs/DEPLOYMENT_GUIDE.md: Add validation for IMAGE_TAG variable
- .env.example: Remove obsolete BUILD_TARGET (compose no longer builds)
- docker/php/healthcheck.sh: Simplify by removing unused cgi-fcgi check
- Makefile: Fix misleading comment, add bake-e2e target
- compose.yml: Fix app-e2e to use :e2e tag matching bake target
- Dockerfile: Run CA cert update at build time (requires root)

--- a/compose.yml
+++ b/compose.yml
@@ -162,7 +162,7 @@ services:
   # E2E test app service (build with: docker bake app-e2e)
   # Uses main db with test environment
   app-e2e:
-    image: ghcr.io/netresearch/timetracker:dev
+    image: ghcr.io/netresearch/timetracker:e2e
     environment:
       - APP_ENV=test
       - APP_DEBUG=1
